plugins {
    id 'distribution'
    id 'java'
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

// Repositories providers
repositories {
    mavenCentral()
    google() // smali
}

dependencies {
    testImplementation "org.junit.jupiter:junit-jupiter:5.10.0"
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.0'

    implementation "org.apktool:apktool-lib:2.9.3"
    implementation "org.yaml:snakeyaml:2.2"
    implementation "com.android.tools.smali:smali:3.0.5"

    implementation ":SpecsUtils"
    implementation ":jOptions"

    implementation ":AlpakkaAst"
}

test {
    useJUnitPlatform()
}

// Project sources
sourceSets {
    main {
        java {
            srcDir 'src'
        }
        resources {
            srcDir 'resources'
        }      
    }
    test {
        java {
            srcDir 'test'
        }
        resources {
            srcDir 'resources'
        }
    }
}